--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Iotics Identity SDK in JS",
   "main": "dist/ioticsIdentity.js",
   "dependencies": {
+    "browser-or-node": "^2.0.0",
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
     "cross-fetch": "^3.1.5",
@@ -19,12 +20,14 @@
     "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-    "build:browser": "webpack && cp dist/ioticsIdentity.js dist/ioticsIdentity.wasm examples/browser",
-    "build:node": "webpack && cp dist/ioticsIdentity.js dist/ioticsIdentity.wasm examples/node/ && node examples/node/example.js",
+    "build:browser": "webpack && cp ./dist/ioticsIdentityBrowser.js ./dist/ioticsIdentity.wasm ./examples/browser",
+    "build:node": "webpack && cp ./dist/ioticsIdentityNode.js ./dist/ioticsIdentity.wasm ./examples/node/ && node ./examples/node/example.js",
     "build": "webpack"
   },
   "repository": {
