--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Iotics Identity SDK in JS",
   "dependencies": {
-    "browser-or-node": "^2.0.0",
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
     "cross-fetch": "^3.1.5",
     "crypto-browserify": "^3.12.0",
     "fs": "0.0.1-security",
     "golang-wasm": "^0.1.0",
+    "node-fetch": "^3.2.3",
     "os-browserify": "^0.3.0",
     "regenerator-runtime": "^0.13.9",
     "stream-browserify": "^3.0.0",
