--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "iotics-identity-js",
+  "name": "iotics-identity",
   "main": "./src/index.js",
   "version": "0.0.1",
-  "description": "Iotics Identity SDK in JS",
+  "description": "Iotics Identity SDK",
   "dependencies": {
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
